# separable-conv2d

./: .clang-format  CMakeLists.txt  README.md  gentestdata.py  matrix.hpp  separableconv2d.cpp  separableconv2d.hpp  testsepconv.cpp
testdata/: random-100_100_3_3_3_3-0.txt  random-1_1_1_1_1_1-0.txt  random-1_1_1_3_3_1-0.txt  random-3_3_1_3_3_1-0.txt  random-8_8_1_3_3_1-0.txt  random-8_8_3_3_3_3-0.txt  special-1_1_1_1_1_1-0.txt  special-6_6_1_3_3_1-0.txt  special-6_6_1_3_3_1-1.txt  special-6_6_1_3_3_3-0.txt
